@@ -4,6 +4,9 @@
 	* lisp/sawfish/wm/animation/main.jl
 	* lisp/sawfish/wm/viewport.jl: use 'range widget where appropriate
 
+	* lisp/sawfish/wm/cfg/widgets/frame-style.jl: simplified 'frame-style
+	widget a bit
+
 2011-06-13  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/gtk/widgets/image.jl: improved loading of preview-image
 	-- Lucas Pandolfo
